Update tag casing and delete engineering thought process file

--- a/public/070d0c2f8880a8036aec.md
+++ b/public/070d0c2f8880a8036aec.md
@@ -4,7 +4,7 @@ tags:
   - GCS
   - 備忘録
   - gce
-  - googlecloud
+  - GoogleCloud
 private: false
 updated_at: '2022-03-01T20:44:59+09:00'
 id: 070d0c2f8880a8036aec
