--- a/public/16c5e12393fc49885c08.md
+++ b/public/16c5e12393fc49885c08.md
@@ -4,7 +4,7 @@ tags:
   - GCS
   - gce
   - cloudsql
-  - googlecloud
+  - GoogleCloud
 private: false
 updated_at: '2022-01-16T03:19:22+09:00'
 id: 16c5e12393fc49885c08
