--- a/public/268fb585d01b7afd88e3.md
+++ b/public/268fb585d01b7afd88e3.md
@@ -4,7 +4,7 @@ tags:
   - Node.js
   - SDK
   - NestJS
-  - googlecloud
+  - GoogleCloud
   - cloudtasks
 private: false
 updated_at: '2022-06-27T15:17:05+09:00'
