--- a/public/46d85976332a47310f93.md
+++ b/public/46d85976332a47310f93.md
@@ -3,7 +3,7 @@ title: 【GCP】DataStoreのKindをDataFlowで削除するアレコレ
 tags:
   - datastore
   - dataflow
-  - googlecloud
+  - GoogleCloud
 private: false
 updated_at: '2022-07-13T20:26:34+09:00'
 id: 46d85976332a47310f93
