--- a/public/81bf1eca66b1002d4e39.md
+++ b/public/81bf1eca66b1002d4e39.md
@@ -2,7 +2,7 @@
 title: 【GCP】Cloud Load Balancingによる負荷分散
 tags:
   - loadbalancer
-  - googlecloud
+  - GoogleCloud
 private: false
 updated_at: '2022-03-01T20:42:56+09:00'
 id: 81bf1eca66b1002d4e39
