--- a/public/a188dbeb58fd99ad79b5.md
+++ b/public/a188dbeb58fd99ad79b5.md
@@ -3,7 +3,7 @@ title: Cloud Functions サーバーレスでアプリケーションを実行す
 tags:
   - cloudsql
   - cloudfunctions
-  - googlecloud
+  - GoogleCloud
 private: false
 updated_at: '2022-03-01T20:40:40+09:00'
 id: a188dbeb58fd99ad79b5
