--- a/public/b84219fdb81149c69cbb.md
+++ b/public/b84219fdb81149c69cbb.md
@@ -3,7 +3,7 @@ title: 無料で取得したドメインをCloud Load BalancingのIPに紐づけ
 tags:
   - loadbalancer
   - CloudDNS
-  - googlecloud
+  - GoogleCloud
 private: false
 updated_at: '2022-03-01T20:41:04+09:00'
 id: b84219fdb81149c69cbb
