--- a/public/78e12198903bffca6fb9.md
+++ b/public/78e12198903bffca6fb9.md
@@ -4,7 +4,7 @@ tags:
   - GCS
   - 備忘録
   - gce
-  - googlecloud
+  - GoogleCloud
 private: false
 updated_at: '2022-03-01T20:45:19+09:00'
 id: 78e12198903bffca6fb9
