--- a/public/3分間ネットワーク基礎講座.md
+++ b/public/3分間ネットワーク基礎講座.md
@@ -16,7 +16,7 @@ ignorePublish: false
 ## データ通信の基本
 
 - データはビットという単位で表現されます。
-- ビットは「0」と「1」の2つの値を持つことができます。
+- ビットは「0」または「1」の値を持ちます。
 - ビット列をまとめたものをバイトと呼びます。
 
 ## データ通信で必要なもの
