Add new educational articles and update content privacy

--- a/public/3分間ネットワーク基礎講座.md
+++ b/public/3分間ネットワーク基礎講座.md
@@ -3,7 +3,7 @@ title: 3分間ネットワーク基礎講座
 tags:
   - CS
   - ネットワーク
-private: false
+private: true
 updated_at: ''
 id: null
 organization_url_name: null
