Update 'Top Engineer Thinking Method' article

--- a/public/世界一流エンジニアの思考法を読む.md
+++ b/public/世界一流エンジニアの思考法を読む.md
@@ -37,3 +37,9 @@ ignorePublish: false
 - WIP=1 (作業中の仕事は一つに限定する)
 - マルチタスクを避ける
 - 自分の理解を言語化することで構造を整理する
+
+## 第4章 コミュニケーションの極意- 伝え方・聞き方・ディスカッション
+
+- 情報量を最小にコントロールして理解してもらうことに時間をかける
+- 日頃から人に伝えることを前提とした準備をしておく
+- ディスカッションは、自分の考えを自分なりに深めるための行為なので、間違えたら恥ずかしいという気持ちを捨てる
